--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
         temp:
           allow_jdbc_metadata_access: false
         default_batch_fetch_size: 50
