feat: board v1 메서드 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
 spring:
   threads:
     virtual:
-      enabled: true  # ?? ??? ???
+      enabled: true
   application:
     name: spring_boot_jooq_sample
 
