feat: board v2 추가 (jooq)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,3 +46,10 @@ springdoc:
     display-request-duration: true
     operations-sorter: alpha
   paths-to-match: /api/**
+
+logging:
+  level:
+    org:
+      jooq.tools.LoggerListener: debug
+      springframework:
+        transaction.interceptor: trace
